[gd_scene load_steps=3 format=2]

[ext_resource path="res://screens/abstract_screen.tscn" type="PackedScene" id=1]
[ext_resource path="res://screens/lose/lose_screen.gd" type="Script" id=2]

[node name="LoseScreen" instance=ExtResource( 1 )]

script = ExtResource( 2 )
next_scene = "res://screens/gameplay/play_screen.tscn"

[node name="Label" type="Label" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 179.0
margin_top = 192.0
margin_right = 817.0
margin_bottom = 335.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "you lose"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TryAgain" type="Button" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 422.0
margin_top = 368.0
margin_right = 572.0
margin_bottom = 407.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Play Again!!"
flat = false

[node name="BackMainMenu" type="Button" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 422.0
margin_top = 422.0
margin_right = 572.0
margin_bottom = 461.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Back to Main Menu"
flat = false

[node name="Quit" type="Button" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 422.0
margin_top = 478.0
margin_right = 572.0
margin_bottom = 517.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Quit"
flat = false

[connection signal="button_up" from="TryAgain" to="." method="_on_try_again"]

[connection signal="button_up" from="BackMainMenu" to="." method="_on_back_main_menu"]

[connection signal="button_up" from="Quit" to="." method="_on_quit"]


